Start 1.1.0 & Fix dependency issues on Java 16